--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,105 @@
-.App {
+body {
+    margin: 0;
+    padding: 50px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: Cambria, Georgia, Times, 'Times New Roman', serif;
+    margin-top: 48px;
+}
+
+a {
+    color: #00b7ff;
+}
+
+img {
+    max-width: 200px;
+    float: right;
+}
+
+.left {
+    float: left;
+}
+
+.right {
+    float: right;
+}
+
+.center {
     text-align: center;
 }
 
-.App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 40vmin;
-    pointer-events: none;
+main,
+.site-header,
+.site-footer {
+    max-width: 700px;
+    margin: 0 auto;
 }
 
-.App-header {
-    background-color: #282c34;
-    min-height: 100vh;
+.site-header {
+    background-color: lightgrey;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.site-title {
+    font-size: 2.8em;
+}
+
+.site-footer {
+    clear: both;
+    text-align: center;
+    font-size: 13px;
+    color: grey;
+}
+
+.game-container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: space-evenly;
+}
+
+
+
+.login-section {
+    display: flex;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
 }
 
-.App-link {
-    color: #61dafb;
+.login,
+.register {
+    margin: 20px;
 }
 
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
+label {
+    display: block;
+}
 
-    to {
-        transform: rotate(360deg);
-    }
+input[type=submit] {
+    display: block;
+}
+
+.logout-button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+.button {
+    width: 50px;
+    font: bold 11px Arial;
+    text-decoration: none;
+    background-color: #eee;
+    color: #333;
+    padding: 2px 6px;
+    border-top: 1px solid #ccc;
+    border-right: 1px solid #333;
+    border-bottom: 1px solid #333;
+    border-left: 1px solid #ccc;
 }
